<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/mainScreenInfo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_mainViewInfo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0"/>

    <Button
        android:id="@+id/button_addNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:minHeight="70dp"
        android:text="@string/buttonText_addNewNote"
        android:textSize="20sp"

        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.9"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#00000000"

        app:layout_constraintBottom_toTopOf="@+id/button_addNewNote"
        app:layout_constraintHorizontal_bias="0"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenInfo_text"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:itemCount="7">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/text_noteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_noteCount"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_addNewNote"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883"
        />


</androidx.constraintlayout.widget.ConstraintLayout>